package nl.nextiga.inventory.domain;

public enum RouterType {
    EDGE,
    CORE
}
